apps/prod/rbx-cms/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: rbx-cms
  labels:
    app.kubernetes.io/part-of: rbx-cms
